Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/T8033483/IgnoreLambdaBodyDuringResolutionTest1.out
IgnoreLambdaBodyDuringResolutionTest1.java:29:9: compiler.err.ref.ambiguous: foo, kindname.method, foo(IgnoreLambdaBodyDuringResolutionTest1.B), IgnoreLambdaBodyDuringResolutionTest1, kindname.method, foo(IgnoreLambdaBodyDuringResolutionTest1.C), IgnoreLambdaBodyDuringResolutionTest1
1 error
